fix: header spacing fix

--- a/assets/scss/modules/_header_nav.scss
+++ b/assets/scss/modules/_header_nav.scss
@@ -37,6 +37,10 @@
   }
 }
 
+.header_home + li {
+  margin-left: 0;
+}
+
 .header::after {
   content: "";
   position: absolute;
